objects/Integration__c.object
<CustomObject>
    <description>Manage all outbound integration activity</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Integrations</relationshipLabel>
        <relationshipName>Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Integrations</relationshipLabel>
        <relationshipName>Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Article__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Article</label>
        <referenceTo>Article__c</referenceTo>
        <relationshipLabel>Integrations</relationshipLabel>
        <relationshipName>Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCR</label>
        <referenceTo>CCR__c</referenceTo>
        <relationshipLabel>Integrations</relationshipLabel>
        <relationshipName>Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Comment__c</fullName>
        <label>Case Comment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Integrations History</relationshipLabel>
        <relationshipName>Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Integrations</relationshipLabel>
        <relationshipName>Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email</label>
        <referenceTo>Email__c</referenceTo>
        <relationshipLabel>Integrations</relationshipLabel>
        <relationshipName>Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <picklist>
            <picklistValues>
                <fullName>COS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eDAonTap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OBIEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVAYA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MISC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAPAC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entitlement_Contact__c</fullName>
        <label>Entitlement Contact</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entitlement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entitlement</label>
        <referenceTo>Entitlement</referenceTo>
        <relationshipLabel>Integrations</relationshipLabel>
        <relationshipName>Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSS_Index_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GSS_Index_Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ICM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ICM Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Integrations (ICM Account)</relationshipLabel>
        <relationshipName>Integrations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ICM_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ICM Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Integrations (ICM Opportunity)</relationshipLabel>
        <relationshipName>Integrations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident</label>
        <referenceTo>BMCServiceDesk__Incident__c</referenceTo>
        <relationshipLabel>Integrations</relationshipLabel>
        <relationshipName>Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Issue</label>
        <referenceTo>Issue__c</referenceTo>
        <relationshipLabel>Integrations</relationshipLabel>
        <relationshipName>Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Run__c</fullName>
        <label>Last Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Middleware_Job_ID__c</fullName>
        <description>Unique middleware instance ID</description>
        <externalId>true</externalId>
        <label>Middleware Job ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Integrations</relationshipLabel>
        <relationshipName>Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Attr_to_Feat_Jct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Attr to Feat Jct</label>
        <referenceTo>Prod_Attr_to_Feat_Jct_c__c</referenceTo>
        <relationshipLabel>Integrations</relationshipLabel>
        <relationshipName>Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Attribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Attribute</label>
        <referenceTo>Product_Attribute__c</referenceTo>
        <relationshipLabel>Integrations</relationshipLabel>
        <relationshipName>Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Cls_to_Feat_Jct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Cls to Feat Jct</label>
        <referenceTo>Prod_Cls_to_Feat_Jct__c</referenceTo>
        <relationshipLabel>Integrations</relationshipLabel>
        <relationshipName>Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Feature_Level1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Feature Lavel 1</label>
        <referenceTo>Product_Feature_Level_1__c</referenceTo>
        <relationshipLabel>Integrations</relationshipLabel>
        <relationshipName>Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Feature_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Feature Version</label>
        <referenceTo>Product_Feature_Version__c</referenceTo>
        <relationshipLabel>Integrations</relationshipLabel>
        <relationshipName>Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Feature</label>
        <referenceTo>Product_Feature__c</referenceTo>
        <relationshipLabel>Integrations</relationshipLabel>
        <relationshipName>Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Price__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Price</label>
        <referenceTo>Product_Price__c</referenceTo>
        <relationshipLabel>Integrations</relationshipLabel>
        <relationshipName>Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Integrations</relationshipLabel>
        <relationshipName>Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Class</label>
        <referenceTo>Product_Class__c</referenceTo>
        <relationshipLabel>Integrations</relationshipLabel>
        <relationshipName>Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Integrations</relationshipLabel>
        <relationshipName>Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release Product</label>
        <referenceTo>Release_Product__c</referenceTo>
        <relationshipLabel>Integrations</relationshipLabel>
        <relationshipName>Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SObject_ID__c</fullName>
        <label>SObject ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObject_Type__c</fullName>
        <label>SObject Type</label>
        <picklist>
            <picklistValues>
                <fullName>Case Comment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attachment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ContentVersion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entitlement Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>0 - NEW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - UPDATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - PROCESSING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - SUCCESSFUL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - FAILED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - DELETE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 - IGNORE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Integrations</relationshipLabel>
        <relationshipName>Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Integration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SObject_ID__c</columns>
        <columns>NAME</columns>
        <columns>SObject_Type__c</columns>
        <columns>Endpoint__c</columns>
        <columns>Article__c</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Case__c</columns>
        <columns>Contact__c</columns>
        <columns>Entitlement__c</columns>
        <columns>Email__c</columns>
        <columns>Entitlement_Contact__c</columns>
        <columns>External_ID__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Endpoint__c</field>
            <operation>equals</operation>
            <value>GoogleCrawl</value>
        </filters>
        <filters>
            <field>Article__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CCMS</fullName>
        <columns>NAME</columns>
        <columns>SObject_ID__c</columns>
        <columns>SObject_Type__c</columns>
        <columns>Endpoint__c</columns>
        <columns>CCR__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Endpoint__c</field>
            <operation>equals</operation>
            <value>COS</value>
        </filters>
        <filters>
            <field>CCR__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>CCMS</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>I-{YYYY}-{MM}-{DD}-{0}</displayFormat>
        <label>Integration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>